# kill-bug-machine

./: .cursorrules  .env.example  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  fix-ui-imports.js  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  release.yml  tauri-release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/api/: auth.rs  mod.rs
apps/desktop/src-tauri/src/cli/: main.rs
apps/desktop/src-tauri/src/commands/: issues.rs  mod.rs
apps/desktop/src-tauri/src/db/: connection.rs  mod.rs
apps/web/: .env.example  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  routeTree.gen.ts
apps/web/src/app/: globals.css  layout.tsx  query-client.ts  router.tsx
apps/web/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  nav-user.tsx  progress-bar.tsx  site-header.tsx
apps/web/src/config/: app.ts  (+1 more)
docs/: api.md  architecture.md  implementation_plan.md  index.md  skills-backend.md  skills-frontend.md
docs/.vitepress/: config.mts
docs/guide/: getting-started.md
docs/schema/: activity-log.md  attachments.md  comments.md  overview.md  project-members.md
supabase/: config.toml
supabase/migrations/: 20260611100000_profiles.sql  20260611100001_marketplace.sql  20260611153600_fix_triggers.sql  20260611164506_create_notifications_table.sql
(+72 files in other folders)
